--- a/student.html
+++ b/student.html
@@ -1,20 +1,19 @@
 <!doctype html>
 <html>
     <head>
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet"
     </head>
     <body>
-        <ul>
+        <li>
             <li>
                 <a href="index.html">ТГПУ</a>
-            </li>
+                </li>
                 <li>
                     <a href="student">Студент</a>
-                </li>
-        </ul>
+                <li>
+          </li>
         <img src="gerbtspu118.png">
         <h1>Мой сайт</h1>
         <p>Я учусь в <a href="https://www.tspu.edu.ru">ТГПУ</a></p>
     </body>
 </html>
-
