--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <title>Web</title>
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
