--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <ul>
             <li>
-                <a href="index.html">ТГПУ</a>
+                <a href="index.html">Образование</a>
             </li>
                 <li>
-                    <a href="student">Студент</a>
+                    <a href="student">Тренерская деятельность</a>
                 </li>
         </ul>
         <img src="gerbtspu118.png">
