--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </li>
         </ul>
         <img src="gerbtspu118.png">
-        <h1>Мой сайт</h1>
+        <h1>"ВК Триумф"</h1>
         <p>Я учусь в <a href="https://www.tspu.edu.ru">ТГПУ</a></p>
     </body>
 </html>
