--- a/education.html
+++ b/education.html
@@ -10,14 +10,12 @@
             <li>
                 <a href=./index.html>ВК Триумф</a>
             </li>
-            <li><a href=./education.html>Образование</a> </li>
             <li>
                  <a href=./student>Тренерская деятельность</a>
             </li>
         </ul>
-        <img src="gerbtspu118.png">
         <h1>ВК "Триумф"</h1>
+        <h2>Образование</h2>
         <p>Я учусь в <a href="https://www.tspu.edu.ru">ТГПУ</a></p>
     </body>
 </html>
-
