--- a/student.html
+++ b/student.html
@@ -6,10 +6,10 @@
     <body>
         <li>
             <li>
-                <a href="index.html">ТГПУ</a>
+                <a href=./index.html>ВК Триумф</a>
                 </li>
                 <li>
-                    <a href="student">Студент</a>
+                    <a href=./education.html>Образование</a>
                 <li>
           </li>
         <img src="gerbtspu118.png">
